fillDB and getUsers funcs
