# main.go
@@ -16,6 +16,17 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
+func loggingAndHeadersMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		log.Println(r.RequestURI, r.Method)
+		for header := range conf.Headers {
+			w.Header().Set(header, conf.Headers[header])
+		}
+
+		next.ServeHTTP(w, r)
+	})
+}
+
 func main() {
 	myRouter := mux.NewRouter()
 	urlDB := "postgres://" + conf.DBSPuser + ":" + conf.DBPassword + "@" + conf.DBHost + ":" + conf.DBPort + "/" + conf.DBName
@@ -36,9 +47,13 @@ func main() {
 
 	Handler := delivery.NewHandler(Usecase)
 
+	myRouter.HandleFunc(conf.PathFillDB, Handler.FillDB).Methods(http.MethodPost, http.MethodOptions)
+	myRouter.HandleFunc(conf.PathGetUsers, Handler.GetUsers).Methods(http.MethodGet, http.MethodOptions)
 	myRouter.HandleFunc(conf.PathUserBanner, Handler.GetUserBanner).Methods(http.MethodGet, http.MethodOptions)
 
 	myRouter.PathPrefix(conf.PathDocs).Handler(httpSwagger.WrapHandler)
+
+	myRouter.Use(loggingAndHeadersMiddleware)
 
 	err = http.ListenAndServe(conf.Port, myRouter)
 	if err != nil {
